Fix some layout issues

--- a/src/stylesheets/components/_pagefooter.scss
+++ b/src/stylesheets/components/_pagefooter.scss
@@ -1,9 +1,16 @@
+.page-footer-margin{
+    flex-grow: 1;
+}
+
 .page-footer{
     color: white;
     
     display: flex;
 
     justify-content: center;
+
+    flex-shrink: 0;
+    margin-top: auto;
 }
 
 .page-footer-content{
