--- a/src/stylesheets/layout/_content.scss
+++ b/src/stylesheets/layout/_content.scss
@@ -4,8 +4,14 @@ $outer-grid-margins: (
     phone: 8px,
 );
 
+.page{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
 
-.base-outer{
+.page-content{
+    flex: 0 0 auto;
     display:flex;
     flex-direction: row;
     justify-content: center;
